Changes and styles added

--- a/my-second-repo.html
+++ b/my-second-repo.html
@@ -7,6 +7,9 @@
     <title>My Second GITHUB Repo</title>
 </head>
 <body>
-    
+    <h1>Testing on a header</h1>
+    <h1 id="Heading">Testing on a styled Header</h1>
+    <p>Testing on a paragraph</p>
+    <p id="Paragraph">Testing on a styled paragraph</p>
 </body>
 </html>
