--- a/my-second-repo.html
+++ b/my-second-repo.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="Theon grudge logo black.png" alt="">
+
     <h1>Testing on a header</h1>
     <h1 id="Heading">Testing on a styled Header</h1>
     <p>Testing on a paragraph</p>
