--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img src="Theon grudge logo black.png" alt="">
-
+    <img src="OIP.jpg" alt="">
     <h1>Testing on a header</h1>
     <h1 id="Heading">Testing on a styled Header</h1>
     <p>Testing on a paragraph</p>
