--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
     <h1 id="Heading">Testing on a styled Header</h1>
     <p>Testing on a paragraph</p>
     <p id="Paragraph">Testing on a styled paragraph</p>
+    <h5>i can do something</h5>
+
+
+
+    <h1>Test for merging</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, eaque error et ipsa deserunt quasi quas temporibus commodi est ipsam beatae dolores, omnis numquam laboriosam culpa ducimus provident aut quia earum velit. Quis maiores possimus accusantium officiis, nobis magni mollitia?</p>
+
+
+
+    <h1> Testing for merging went wrong</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ad delectus ipsum assumenda, doloribus omnis voluptatum dignissimos sint magni! Placeat consectetur deserunt, delectus tempore omnis ut fugit. Quam accusantium explicabo saepe ipsam maiores, quisquam beatae iusto? Quos, quisquam possimus inventore in beatae praesentium culpa ex voluptatem illo minus incidunt quae quo repellat, impedit nihil pariatur et sequi obcaecati dolore! Consequatur veritatis quas aspernatur ab. Perferendis inventore sed in quidem similique. Facilis cum dolore totam perferendis ea in, sint nesciunt eveniet a consequuntur quo ipsum. Mollitia, unde dolorum eum, dignissimos debitis, incidunt ipsa minus officia quam corporis perspiciatis porro maiores officiis nisi? Ipsum natus expedita itaque aspernatur est rerum suscipit placeat esse. Ut assumenda vel deserunt qui itaque beatae eaque obcaecati praesentium atque eveniet corporis dolore fugit, consequatur, dolorum vitae, a consectetur alias blanditiis cumque voluptatum iste expedita. Possimus, recusandae ullam vero quidem ex, praesentium aut eaque quis commodi reiciendis labore nesciunt quos quaerat, ab laborum error dolorem tempora nobis earum iure odio reprehenderit quo numquam! Ipsum provident libero iure ullam, cupiditate expedita vel dolorum commodi quidem eum veniam saepe molestiae harum, totam nulla reprehenderit ex nesciunt maiores amet debitis illo tempore. Quia ducimus porro perspiciatis, officiis nesciunt tempore quo consectetur!</p>
 </body>
 </html>
